# huggingface_libtorch

./: .clang-format  .gitignore  .syntastic_cpp_config  .travis.yml  CMakeLists.txt  NOTES.md  README.md  compile.env  hflt.cmake.in
data/: SST-2
models/: config.json  special_tokens_map.json
scripts/: get_albert_pretrained.sh  get_data.sh  get_third_party.sh  sst2tojson.jq  trace_albert.py  trace_model.py
single_include/: hflt.h
src/: CMakeLists.txt  config_utils.cpp  config_utils.h  data_utils.cpp  data_utils.h  dataset_classification.cpp  dataset_classification.h  dataset_qa.cpp  dataset_qa.h  debug_output_tsv.cpp  debug_output_tsv.h  hflt.h  processors.cpp  processors.h  run_model.cpp  run_model.h  squad_utils.cpp  squad_utils.h  tokenizer_albert.cpp  tokenizer_albert.h  tokenizer_base.cpp  tokenizer_base.h  transformer_example.h  transformer_features.h  transformer_stack.h  version.h.in
test/: CMakeLists.txt  hflt_tests.cpp  hflt_tests_catch2.cpp  test_dataset_and_processors.h  test_squad_utils.cpp  test_squad_utils.h  test_transformer_config.h  test_transformer_example.h  utils.cpp  utils.h
test/assets/: sst-2-head.json  sst-2-head.tsv
test/scripts/: convert_squad.py
tests/: tokens_id.txt  tokens_text.txt
